# slint-wokwi-test

./: .gitignore  Cargo.toml  README.md  build.rs  diagram.json  flake.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: build.sh  flash.sh  run-wokwi.sh
src/: main.rs  ui.rs
ui/: main.slint
