[package]
name = "esp32c3"
version = "0.1.0"
authors = ["Andrés Rodríguez <hello@andres.codes>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
once_cell = "1.16.0"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
embedded-hal = "=1.0.0-alpha.8"
esp-idf-hal = "0.38.1"
display-interface-spi = "0.4.1"
display-interface = "0.4.1"
embedded-graphics = "0.7.1"
ili9341 = "0.5.0"

[target.'cfg(target_os = "espidf")'.dependencies.slint]
version = "0.3.1"
default-features = false
# features = ["compat-0-3-0", "std"]
features = ["compat-0-3-0", "unsafe-single-threaded", "libm"]

[build-dependencies]
embuild = "0.30"
anyhow = "1"
slint-build = "0.3.1"